Versión con uso de DTO para las imagenes